{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 78,
  "lineage": "89b1c526-971a-4ddf-937a-9ee0201dd85d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:033236388136:loadbalancer/app/delphis-load-balancer/76d0877c5dd74c13",
            "arn_suffix": "app/delphis-load-balancer/76d0877c5dd74c13",
            "dns_name": "delphis-load-balancer-925015920.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:033236388136:loadbalancer/app/delphis-load-balancer/76d0877c5dd74c13",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "delphis-load-balancer",
            "security_groups": [
              "sg-00fdcf88864148b59"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05db23246fb12e97f"
              },
              {
                "subnet_id": "subnet-084a067737a4ca74b"
              }
            ],
            "subnets": [
              "subnet-05db23246fb12e97f",
              "subnet-084a067737a4ca74b"
            ],
            "vpc_id": "vpc-0abd18fe2d0587115",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:033236388136:listener/app/delphis-load-balancer/76d0877c5dd74c13/bbca0a3148a7a57f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:033236388136:targetgroup/delphis-target-group/63e644e62e65f7c4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:033236388136:listener/app/delphis-load-balancer/76d0877c5dd74c13/bbca0a3148a7a57f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:033236388136:loadbalancer/app/delphis-load-balancer/76d0877c5dd74c13",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:033236388136:targetgroup/delphis-target-group/63e644e62e65f7c4",
            "arn_suffix": "targetgroup/delphis-target-group/63e644e62e65f7c4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:033236388136:targetgroup/delphis-target-group/63e644e62e65f7c4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "delphis-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0abd18fe2d0587115"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f1319cd00d589d33",
            "domain": "vpc",
            "id": "eipalloc-0ae4103b42eb71b50",
            "network_interface": "eni-03367b223011bb258",
            "private_dns": "ip-172-17-2-174.us-west-2.compute.internal",
            "private_ip": "172.17.2.174",
            "public_dns": "ec2-35-155-9-4.us-west-2.compute.amazonaws.com",
            "public_ip": "35.155.9.4",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e0c4add8e9a2445e",
            "domain": "vpc",
            "id": "eipalloc-03ca0c115e68c76ce",
            "network_interface": "eni-0fac877024c4af445",
            "private_dns": "ip-172-17-3-120.us-west-2.compute.internal",
            "private_ip": "172.17.3.120",
            "public_dns": "ec2-54-189-117-161.us-west-2.compute.amazonaws.com",
            "public_ip": "54.189.117.161",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0749f8be20fe14a40",
            "owner_id": "033236388136",
            "vpc_id": "vpc-0abd18fe2d0587115"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae4103b42eb71b50",
            "id": "nat-0fd08cd464fdcdec4",
            "network_interface_id": "eni-03367b223011bb258",
            "private_ip": "172.17.2.174",
            "public_ip": "35.155.9.4",
            "subnet_id": "subnet-084a067737a4ca74b"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ca0c115e68c76ce",
            "id": "nat-0fce5f942ae5032f7",
            "network_interface_id": "eni-0fac877024c4af445",
            "private_ip": "172.17.3.120",
            "public_ip": "54.189.117.161",
            "subnet_id": "subnet-05db23246fb12e97f"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0749f8be20fe14a40",
            "id": "r-rtb-05d880424acbbc2831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d880424acbbc283",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a8c20aa1af96af0d",
            "owner_id": "033236388136",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0fd08cd464fdcdec4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0abd18fe2d0587115"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a87dc148502714f6",
            "owner_id": "033236388136",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0fce5f942ae5032f7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0abd18fe2d0587115"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bb81a45820b61b7",
            "route_table_id": "rtb-0a8c20aa1af96af0d",
            "subnet_id": "subnet-03f3adbcb3888d6e4"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed807199ad93caa5",
            "route_table_id": "rtb-0a87dc148502714f6",
            "subnet_id": "subnet-0c8e9a6b690a13514"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033236388136:security-group/sg-033e94f6821bbee8e",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033e94f6821bbee8e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00fdcf88864148b59"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "delphis-ecs-tasks-security-group",
            "name_prefix": null,
            "owner_id": "033236388136",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0abd18fe2d0587115"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033236388136:security-group/sg-00fdcf88864148b59",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fdcf88864148b59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "delphis-load-balancer-security-group",
            "name_prefix": null,
            "owner_id": "033236388136",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0abd18fe2d0587115"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033236388136:subnet/subnet-03f3adbcb3888d6e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-03f3adbcb3888d6e4",
            "map_public_ip_on_launch": false,
            "owner_id": "033236388136",
            "vpc_id": "vpc-0abd18fe2d0587115"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033236388136:subnet/subnet-0c8e9a6b690a13514",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-0c8e9a6b690a13514",
            "map_public_ip_on_launch": false,
            "owner_id": "033236388136",
            "vpc_id": "vpc-0abd18fe2d0587115"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033236388136:subnet/subnet-084a067737a4ca74b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-084a067737a4ca74b",
            "map_public_ip_on_launch": true,
            "owner_id": "033236388136",
            "vpc_id": "vpc-0abd18fe2d0587115"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033236388136:subnet/subnet-05db23246fb12e97f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-05db23246fb12e97f",
            "map_public_ip_on_launch": true,
            "owner_id": "033236388136",
            "vpc_id": "vpc-0abd18fe2d0587115"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033236388136:vpc/vpc-7f721507",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-e0748b9b",
            "default_route_table_id": "rtb-1c1c5c67",
            "default_security_group_id": "sg-c58a1898",
            "dhcp_options_id": "dopt-06524a74a7962cd4a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-7f721507",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-1c1c5c67",
            "owner_id": "033236388136"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033236388136:vpc/vpc-0abd18fe2d0587115",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-00bd699f55dd36113",
            "default_route_table_id": "rtb-05d880424acbbc283",
            "default_security_group_id": "sg-029b84621070f29d9",
            "dhcp_options_id": "dopt-06524a74a7962cd4a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0abd18fe2d0587115",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05d880424acbbc283",
            "owner_id": "033236388136"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "main_to_ecs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-0891b79cfe04fc075",
            "peer_owner_id": "033236388136",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-7f721507",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "main to ecs vpc"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0abd18fe2d0587115"
          }
        }
      ]
    }
  ]
}